--- a/index.html
+++ b/index.html
@@ -12,7 +12,22 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Umf</h1>
-      <h2 class="project-tagline"></h2>
+      <h2 class="project-tagline">
+\[
+
+    V(x,t)=\frac{\theta(t)}{(2a\sqrt{\pi t})^n} \int_{R^n} u_0(\xi)exp \left\{ - \frac{ |\chi - \xi | ^2}{4a^2t}\right\} d\xi
+
+\]
+
+ И удовлетворяет неравенству
+
+  
+
+\[ 
+
+|V(x,t)|\le sup|u_0(\xi)|,t>0, \xi\in R^n\
+
+\]</h2>
       <a href="https://github.com/Ovchinnikova/UMF" class="btn">View on GitHub</a>
       <a href="https://github.com/Ovchinnikova/UMF/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/Ovchinnikova/UMF/tarball/master" class="btn">Download .tar.gz</a>
@@ -22,19 +37,23 @@
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<script
+src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-
+AMS-MML_HTMLorMML">  
+</script>
+
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+
 
 <h3>
 <a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
@@ -49,7 +68,7 @@ $ git checkout gh-pages
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Ovchinnikova/UMF">Umf</a> is maintained by <a href="https://github.com/Ovchinnikova">Ovchinnikova</a>.</span>
