Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,21 +1,72 @@
-<script
-src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-
-AMS-MML_HTMLorMML">  
-</script>
+<!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
+
+  <title>Umf</title>
+  <meta name="description" content="">
+
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+
+</head>
+
+<body>
+
+  <div class="wrapper">
+    <header>
+      <h1 class="title">Umf</h1>
+    </header>
+    <div id="container">
+      <p class="tagline"></p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/Ovchinnikova/UMF/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/Ovchinnikova/UMF/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/Ovchinnikova/UMF" class="code">View Umf on GitHub</a>
+        </div>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <p>
+   V(x,t)=\frac{\theta(t)}{(2a\sqrt{\pi t})^n} \int_{R^n} u_0(\xi)exp \left{ - \frac{ |\chi - \xi | ^2}{4a^2t}\right} d\xi
+]</p>
+
+<p>И удовлетворяет неравенству</p>
+
+<p>[ </p>
+
+<p>|V(x,t)|\le sup|u_0(\xi)|,t&gt;0, \xi\in R^n\</p>
+
+<p>]</p>
+        </article>
+      </div>
+    </div>
+    <footer>
+      <div class="owner">
+      <p><a href="https://github.com/Ovchinnikova" class="avatar"><img src="https://avatars3.githubusercontent.com/u/11921756?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/Ovchinnikova">Ovchinnikova</a> maintains <a href="https://github.com/Ovchinnikova/UMF">Umf</a></p>
 
 
-\[
-
-    V(x,t)=\frac{\theta(t)}{(2a\sqrt{\pi t})^n} \int_{R^n} u_0(\xi)exp \left\{ - \frac{ |\chi - \xi | ^2}{4a^2t}\right\} d\xi
-
-\]
-
- И удовлетворяет неравенству
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/Ovchinnikova/UMF/tarball/master" class="tar">tar</a><a href="https://github.com/Ovchinnikova/UMF/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
 
   
-
-\[ 
-
-|V(x,t)|\le sup|u_0(\xi)|,t>0, \xi\in R^n\
-
-\]
+</body>
+</html>
