--- a/index.html
+++ b/index.html
@@ -1,16 +1,78 @@
-<script
-src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-
-AMS-MML_HTMLorMML">  
-</script>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=640">
 
-\[
-    V(x,t)=\frac{\theta(t)}{(2a\sqrt{\pi t})^n} \int_{R^n} u_0(\xi)exp \left\{ - \frac{ |\chi - \xi | ^2}{4a^2t}\right\} d\xi
-\]
+    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
+    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
 
- И удовлетворяет неравенству
+    <script type="text/javascript" src="javascripts/modernizr.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $('#main_content').headsmart()
+      })
+    </script>
+    <title>Umf by Ovchinnikova</title>
+  </head>
 
-\[ 
+  <body>
+    <a id="forkme_banner" href="https://github.com/Ovchinnikova/UMF">View on GitHub</a>
+    <div class="shell">
 
-|V(x,t)|\le sup|u_0(\xi)|,t>0, \xi\in R^n\
+      <header>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <h1>Umf</h1>
+            <h2></h2>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+      </header>
 
-\]
+      <section id="downloads">
+        <span class="inner">
+          <a href="https://github.com/Ovchinnikova/UMF/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/Ovchinnikova/UMF/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+        </span>
+      </section>
+
+
+      <span class="banner-fix"></span>
+
+
+      <section id="main_content">
+        <p>
+   V(x,t)=\frac{\theta(t)}{(2a\sqrt{\pi t})^n} \int_{R^n} u_0(\xi)exp \left{ - \frac{ |\chi - \xi | ^2}{4a^2t}\right} d\xi
+]</p>
+
+<p>И удовлетворяет неравенству</p>
+
+<p>[ </p>
+
+<p>|V(x,t)|\le sup|u_0(\xi)|,t&gt;0, \xi\in R^n\</p>
+
+<p>]</p>
+      </section>
+
+      <footer>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <p>this project by <a href="https://github.com/Ovchinnikova">Ovchinnikova</a> can be found on <a href="https://github.com/Ovchinnikova/UMF">GitHub</a></p>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <span class="octocat"></span>
+      </footer>
+
+    </div>
+
+    
+  </body>
+</html>
