Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
     <script type="text/javascript" src="javascripts/modernizr.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script
-src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-
-AMS-MML_HTMLorMML">  
-</script>
     <script type="text/javascript">
       $(document).ready(function () {
         $('#main_content').headsmart()
@@ -50,8 +46,10 @@ AMS-MML_HTMLorMML">
 
 
       <section id="main_content">
-        <p>
-   \[ V(x,t)=\frac{\theta(t)}{(2a\sqrt{\pi t})^n} \int_{R^n} u_0(\xi)exp \left{ - \frac{ |\chi - \xi | ^2}{4a^2t}\right} d\xi
+        <p></p>
+
+<p>[
+    V(x,t)=\frac{\theta(t)}{(2a\sqrt{\pi t})^n} \int_{R^n} u_0(\xi)exp \left{ - \frac{ |\chi - \xi | ^2}{4a^2t}\right} d\xi
 ]</p>
 
 <p>И удовлетворяет неравенству</p>
